Update humgen africa

--- a/VSS_2019/Workshop2_QC/Workshop_QC.ipynb
+++ b/VSS_2019/Workshop2_QC/Workshop_QC.ipynb
@@ -9,7 +9,7 @@
     "<center>\n",
     "<h1>Workshop 2: Quality Control (QC)</h1><br><br>\n",
     "<i><big>Preparing and filtering data for genome-wide association studies.</big><br><br>\n",
-    "Kostas Hatzikotoulas (kh7@sanger.ac.uk)</i>\n",
+    "Hatzikotoulas Konstantinos (Kostas) (hatzikotoulas@helmholtz-muenchen.de)</i>\n",
     "</center>\n",
     "\n",
     "## Objectives\n",
@@ -52,7 +52,15 @@
     "\n",
     "FILE=VSS\n",
     "\n",
-    "cp /data/Workshop2_QC/Step1/VSS.* $DIR/\n",
+    "cp <path to the files>/VSS.* $DIR/\n",
+    "cp <path to the files>/calc_het.pl $DIR/\n",
+    "cp <path to the files>/complex_regions.txt $DIR/\n",
+    "cp <path to the files>/space_to_tab.pl $DIR/\n",
+    "cp <path to the files>/ExcludeIDsonIBD.r $DIR/\n",
+    "cp <path to the files>/Populationfile-1kg.txt $DIR/\n",
+    "cp <path to the files>/Populationfile-1kg_rmoutliers.txt $DIR/\n",
+    "cp <path to the files>/cluster_sep_scr_to-exclude.txt $DIR/\n",
+    "\n",
     "\n",
     "```\n",
     "\n",
@@ -141,8 +149,6 @@
     "##### Run heterozygosity’s script\n",
     "\n",
     "```\n",
-    "cp /data/Workshop2_QC/Step3/calc_het.pl $DIR/\n",
-    "cd $DIR/\n",
     "perl calc_het.pl -f VSS-chr1-22-mafgte0.01-recode.ped\n",
     "perl calc_het.pl -f VSS-chr1-22-mafless0.01-recode.ped\n",
     "\n",
@@ -161,7 +167,7 @@
     "##### Exclude complex regions\n",
     "\n",
     "```\n",
-    "plink --bfile $DIR/$FILE-chr1-22-mafgte0.01 --exclude /data/Workshop2_QC/Step4/complex_regions.txt --range --make-bed --out $DIR/$FILE-chr1-22-mafgte0.01-noCR\n",
+    "plink --bfile $DIR/$FILE-chr1-22-mafgte0.01 --exclude complex_regions.txt --range --make-bed --out $DIR/$FILE-chr1-22-mafgte0.01-noCR\n",
     "\n",
     "```\n",
     "##### LD prune\n",
@@ -180,7 +186,7 @@
     "##### Run space_to_tab.pl on the genome result\n",
     "\n",
     "```\n",
-    "scp -pr /nfs/t144_helic/notebooks/VolosSummerSchool/Workshop_QC/kh7/space_to_tab.pl ./\n",
+    "\n",
     "perl space_to_tab.pl VSS-chr1-22-mafgte0.01-noCR-LDpruned0.2-genome.genome\n",
     "\n",
     "```\n",
@@ -192,9 +198,9 @@
     "For this step, you will need to merge your data with 1000 Genomes genotype data (or HapMap genotype data)\n",
     "\n",
     "```\n",
-    "cp /data/Workshop2_QC/Step5/VSS-1Kg.bed $DIR/\n",
-    "cp /data/Workshop2_QC/Step5/VSS-1Kg.bim $DIR/\n",
-    "cp /data/Workshop2_QC/Step5/VSS-1Kg.fam $DIR/\n",
+    "cp <path to the files>/VSS-1Kg.bed $DIR/\n",
+    "cp <path to the files>/VSS-1Kg.bim $DIR/\n",
+    "cp <path to the files>/VSS-1Kg.fam $DIR/\n",
     "\n",
     "FILE2=VSS-1Kg\n",
     "\n",
@@ -206,7 +212,7 @@
     "\n",
     "```\n",
     "\n",
-    "plink --bfile $DIR/$FILE2 --autosome --maf 0.01 --exclude /data/Workshop2_QC/Step4/complex_regions.txt --range --make-bed --out $DIR/$FILE2-chr1-22-mafgte0.01-noCR\n",
+    "plink --bfile $DIR/$FILE2 --autosome --maf 0.01 --exclude complex_regions.txt --range --make-bed --out $DIR/$FILE2-chr1-22-mafgte0.01-noCR\n",
     "\n",
     "```\n",
     "\n",
@@ -251,8 +257,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "code_folding": [],
-    "collapsed": false
+    "code_folding": []
    },
    "outputs": [
     {
@@ -336,9 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -379,9 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -487,7 +488,6 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -639,9 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -747,7 +745,7 @@
     "\n",
     "```\n",
     "\n",
-    "scp -pr /nfs/t144_helic/notebooks/VolosSummerSchool/Workshop_QC/kh7/ExcludeIDsonIBD.r ./\n",
+    "ExcludeIDsonIBD.r\n",
     "\n",
     "```\n",
     "Change the paths to file1,2 & 3.\n",
@@ -759,7 +757,6 @@
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -853,7 +850,7 @@
     "#      (5)   ETHNICITY           Merged with 1000 genomes file                                                     #\n",
     "# -----------------------------------------------------------------------------------------------------------------#\n",
     "\n",
-    "#scp -pr /nfs/t144_helic/notebooks/VolosSummerSchool/Workshop_QC/kh7/Populationfile-1kg.txt ./\n",
+    "#Populationfile-1kg.txt\n",
     "\n",
     "Cohort <- \"VSS-1Kg\"\n",
     "file <- \"chr1-22-mafgte0.01-noCR-LDpruned0.2-genome-mds.mds\"\n",
@@ -917,7 +914,6 @@
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -933,7 +929,7 @@
     "%%R\n",
     "\n",
     "# Identify the outliers, remove them from the population file (Populationfile-1kg_rmoutliers.txt) and plot again\n",
-    "#Can you do this by using this file /nfs/t144_helic/notebooks/VolosSummerSchool/Workshop_QC/kh7/Populationfile-1kg_rmoutliers.txt\n",
+    "#Can you do this by using this file Populationfile-1kg_rmoutliers.txt\n",
     "\n",
     "pop_info <- read.table(paste(dir, \"Populationfile-1kg_rmoutliers.txt\", sep=\"/\"), sep=\"\\t\", header=TRUE)\n",
     "genome_popinfo <- merge(genome, pop_info, by.x = \"FID\", by.y = \"ID\", all.x = TRUE)\n",
@@ -975,9 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1275,7 +1269,7 @@
     "Q: Can you run the plink command for all these thresholds:\n",
     "\n",
     "```\n",
-    "plink --bfile $DIR/VSS_sampleQCed --geno 0.02 --hwe 0.0001 --exclude /data/Workshop2_QC/All_data/cluster_sep_scr_to-exclude.txt --maf 0.01 --make-bed --out $DIR/VSS_sampleQCed_variantQCed\n",
+    "plink --bfile $DIR/VSS_sampleQCed --geno 0.02 --hwe 0.0001 --exclude cluster_sep_scr_to-exclude.txt --maf 0.01 --make-bed --out $DIR/VSS_sampleQCed_variantQCed\n",
     "\n",
     "```"
    ]
@@ -1298,9 +1292,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
